# xelis-flutter-ffi

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: check_and_lint.yml  test_example_plugin_build.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/.github/workflows/: test_example_plugin_build.yml
cargokit/gradle/: plugin.gradle
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
gradle/: plugin.gradle
ios/: xelis_flutter.podspec
ios/Classes/: frb_generated.h
lib/src/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/api/: api.dart  logger.dart  network.dart  precomputed_tables.dart  precomputed_tables.freezed.dart  utils.dart  (+4 more)
linux/: CMakeLists.txt
macos/: xelis_flutter.podspec
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: frb_generated.rs
rust/src/api/: api.rs  mod.rs  network.rs  precomputed_tables.rs  table_generation.rs  utils.rs  wallet.rs
rust/src/api/models/: address_book_dtos.rs
rust/src/api/xswd/: native.rs  stub.rs
tool/: generate_bindings.dart
windows/: CMakeLists.txt
(+10 files in other folders)
