[package]
name = "xelis_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.12.0", features = ["log"] }
anyhow = "1"
log = { version = "0.4", features = ["release_max_level_trace"] }
parking_lot = "0.12.1"
simplelog = "0.12.1"
lazy_static = "1.4.0"
serde_json = "1"
xelis_wallet = { git = "https://github.com/xelis-project/xelis-blockchain", rev = "d7affdc96de0b18853a84e656ef8b6e65c76a74d", package = "xelis_wallet", default-features = false }
xelis_common = { git = "https://github.com/xelis-project/xelis-blockchain", rev = "d7affdc96de0b18853a84e656ef8b6e65c76a74d", package = "xelis_common" }
serde = { version = "1.0.197", features = ["derive"] }
trie-rs = "0.4.2"
bytemuck_derive = "=1.8.1"
lru = "0.12"
indexmap = { version = "2.0.0", features = ["serde"] }

[build-dependencies]
flutter_rust_bridge_codegen = "2.12.0" 
anyhow = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustls = { version = "0.23.29", features = ["ring"], default-features = false }

[features]
default = ["xelis_wallet/api_server", "log/release_max_level_trace"]
network_handler = ["xelis_wallet/network_handler"]
